<resources>
    <string name="app_name">UltraProject</string>
    <string name="Button_back">back</string>

    <string name="Button_calculator">Calculator</string>
    <string name="Button_colorHelper">Color helper</string>
    <string name="Button_notes">Notes</string>

    <string name="Button_zero">0</string>
    <string name="Button_one">1</string>
    <string name="Button_two">2</string>
    <string name="Button_three">3</string>
    <string name="Button_four">4</string>
    <string name="Button_five">5</string>
    <string name="Button_six">6</string>
    <string name="Button_seven">7</string>
    <string name="Button_eight">8</string>
    <string name="Button_nine">9</string>
    <string name="Button_delete_one">D</string>
    <string name="Button_delete_all">C</string>
    <string name="Button_plus">+</string>
    <string name="Button_minus">-</string>
    <string name="Button_multiplication">*</string>
    <string name="Button_division">/</string>
    <string name="Button_percent">%</string>
    <string name="Button_equal">=</string>
    <string name="Button_coma">,</string>

    <string name="EditText_search">Search</string>
    <string name="EditText_write">Write this</string>
    <string name="Theme_notes">Тема</string>
    <string name="Body_notes">Основна частина</string>
    <string name="add">add</string>

    <string name="refresh">refresh</string>
    <string name="themes">Тема -</string>
    <string name="name">Название</string>
    <string name="main_color">chosen color</string>
    <string name="complementary_color">complementary color</string>
    <string name="analogous_colors">analogous colors</string>
    <string name="split_complementary_colors">split complementary colors</string>
    <string name="triadic_colors">triadic colors</string>
    <string name="tetradic_colors">tetradic colors</string>
    <string name="s">S</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="relative_colors">Relative colors</string>
    <string name="color_info">Color info</string>
    <string name="rgb">RGB</string>
    <string name="hsv">HSV</string>
    <string name="example">example</string>
    <string name="cmyk">CMYK</string>
    <string name="binary">Binary</string>
    <string name="hex">Hex</string>

</resources>