<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fragment_color_helper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorHelper.CHRelatedFragment"
    >

    <Button
        android:id="@+id/back_colorHelper"
        style="@style/backMain_button"/>

    <TextView
        android:text="@string/main_color"
        style="@style/text_view_in_color_helper"
        android:layout_below="@+id/back_colorHelper"
        android:id="@+id/tv_for_main_color"
        />

    <FrameLayout
        android:id="@+id/main_color"
        style="@style/frame_layouts_for_colors"
        android:layout_below="@+id/tv_for_main_color"
        />

    <TextView
        android:text="@string/complementary_color"
        style="@style/text_view_in_color_helper"
        android:layout_below="@+id/main_color"
        android:id="@+id/tv_for_complementary_color"
        />

    <FrameLayout
        style="@style/frame_layouts_for_colors"
        android:layout_below="@+id/tv_for_complementary_color"
        android:id="@+id/complementaryColor"
        />

    <TextView
        android:text="@string/analogous_colors"
        style="@style/text_view_in_color_helper"
        android:layout_below="@+id/complementaryColor"
        android:id="@+id/tv_for_analogous_color"
        />

    <FrameLayout
        style="@style/frame_layouts_left"
        android:layout_below="@+id/tv_for_analogous_color"
        android:id="@+id/left_analogous_color"
        />

    <FrameLayout
        style="@style/frame_layouts_right"
        android:layout_below="@+id/tv_for_analogous_color"
        android:id="@+id/right_analogous_color"
        />

    <FrameLayout
        style="@style/frame_layouts_center"
        android:layout_below="@+id/tv_for_analogous_color"
        android:id="@+id/center_analogous_color"
        />

    <TextView
        android:text="@string/split_complementary_colors"
        style="@style/text_view_in_color_helper"
        android:layout_below="@+id/center_analogous_color"
        android:id="@+id/tv_for_split_complementary"
        />

    <FrameLayout
        style="@style/frame_layouts_left"
        android:layout_below="@+id/tv_for_split_complementary"
        android:id="@+id/left_split_complementary"
        />

    <FrameLayout
        style="@style/frame_layouts_right"
        android:layout_below="@+id/tv_for_split_complementary"
        android:id="@+id/right_split_complementary"
        />

    <FrameLayout
        style="@style/frame_layouts_center"
        android:layout_below="@+id/tv_for_split_complementary"
        android:id="@+id/center_split_complementary"
        />

    <TextView
        android:text="@string/triadic_colors"
        style="@style/text_view_in_color_helper"
        android:layout_below="@+id/center_split_complementary"
        android:id="@+id/tv_for_triadic_color"
        />

    <FrameLayout
        style="@style/frame_layouts_left"
        android:layout_below="@+id/tv_for_triadic_color"
        android:id="@+id/left_triadic"
        />

    <FrameLayout
        style="@style/frame_layouts_right"
        android:layout_below="@+id/tv_for_triadic_color"
        android:id="@+id/right_triadic"
        />

    <FrameLayout
        style="@style/frame_layouts_center"
        android:layout_below="@+id/tv_for_triadic_color"
        android:id="@+id/center_triadic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_add" />
    </LinearLayout>

</RelativeLayout>