<<<<<<< HEAD
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="NavigationFragment"
    android:orientation="vertical"
    android:id="@+id/list_item"
    >

    <EditText
        android:id="@+id/text_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText_search"
        android:importantForAutofill="no"
        android:inputType="text" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    </ListView>

    <Button
        android:id="@+id/bt_calculator"
        style="@style/navigation_button"
        android:text="@string/Button_calculator" />

    <Button
        android:id="@+id/bt_color_helper"
        style="@style/navigation_button"
        android:text="@string/Button_colorHelper" />

</LinearLayout>
=======
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/Fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationFragment">

    <Button
        android:id="@+id/fragment_calculator_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Button_fragment_calculator" />

    <Button
        android:id="@+id/bt_color_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_calculator_change"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Color Helper" />

</RelativeLayout>
>>>>>>> 7f7b838 (test)
